Subimos toda la morralla esta, haber lo que vale

--- a/index.html
+++ b/index.html
@@ -4,18 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="main.js"></script>
     <title>Arrays</title>
   </head>
   <body>
-    <div class="section">
-      <a href="www.capitanmaravilla.com"></a>
-      <img src="casa.png" alt="imagen" />
-      <h1></h1>
-      <ul>
-        <a  href="www.capitanmaravilla.com"></a
-        ><a href="www.cañjkdklafj"></a
-        ><a href="kalkdfjalskjf"></a>
-      </ul>
-    </div>
+    <h1>Web de prueba</h1>
+    <button onclick="clickeando()">Clickeame</button>
   </body>
 </html>
