--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="main.js"></script>
-    <title>Arrays</title>
-  </head>
-  <body>
-    <h1>Web de prueba</h1>
-    <button onclick="clickeando()">Clickeame</button>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<script src="main.js"></script>
+		<title>Arrays</title>
+	</head>
+	<body>
+		<div>
+			<comocomo>
+				<h1>Web de prueba</h1>
+				<button onclick="clickeando()">Clickeame</button>
+			</comocomo>
+		</div>
+	</body>
 </html>
